--- a/contributors.html
+++ b/contributors.html
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Reference Guide</li><li class="chapter-item expanded "><a href="testing-101/index.html"><strong aria-hidden="true">1.</strong> Testing 101</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> Resources</div></li><li class="chapter-item expanded affix "><li class="part-title">Developer Guide</li><li class="chapter-item expanded "><a href="cli/index.html"><strong aria-hidden="true">3.</strong> Command Line Tool</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="cli/install.html"><strong aria-hidden="true">3.1.</strong> install</a></li><li class="chapter-item expanded "><a href="cli/clean.html"><strong aria-hidden="true">3.2.</strong> clean</a></li><li class="chapter-item expanded "><a href="cli/check.html"><strong aria-hidden="true">3.3.</strong> check</a></li><li class="chapter-item expanded "><a href="cli/format.html"><strong aria-hidden="true">3.4.</strong> format</a></li><li class="chapter-item expanded "><a href="cli/test.html"><strong aria-hidden="true">3.5.</strong> test</a></li><li class="chapter-item expanded "><a href="cli/test_coverage.html"><strong aria-hidden="true">3.6.</strong> test_coverage</a></li><li class="chapter-item expanded "><a href="cli/test_coverage_html.html"><strong aria-hidden="true">3.7.</strong> test_coverage_html</a></li><li class="chapter-item expanded "><a href="cli/run_circleci_scraper.html"><strong aria-hidden="true">3.8.</strong> run_circleci_scraper</a></li><li class="chapter-item expanded "><a href="cli/run_test_metric_reporter.html"><strong aria-hidden="true">3.9.</strong> run_test_metric_reporter</a></li></ol></li><li class="chapter-item expanded "><li class="spacer"></li><li class="chapter-item expanded affix "><a href="contributors.html" class="active">Contributors</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Reference Guide</li><li class="chapter-item expanded "><a href="testing-101/index.html"><strong aria-hidden="true">1.</strong> Testing 101</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> Resources</div></li><li class="chapter-item expanded affix "><li class="part-title">Developer Guide</li><li class="chapter-item expanded "><a href="cli/index.html"><strong aria-hidden="true">3.</strong> Command Line Tool</a></li><li class="chapter-item expanded affix "><li class="spacer"></li><li class="chapter-item expanded affix "><a href="contributors.html" class="active">Contributors</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -186,7 +186,7 @@
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="cli/run_test_metric_reporter.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="cli/index.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
@@ -197,7 +197,7 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="cli/run_test_metric_reporter.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="cli/index.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
